working on rendering word data / addded new dashboard layout

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,6 +1,8 @@
 .side-bar{
-    transition: 1s ease
-
+    transition: 1s ease;
+    z-index:3;
+    position:absolute;
+    background-color: white;
 }
 
 .toggle-menu {
