--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,8 @@ body {
       'main'
       'footer';
     height: 100vh;
+    max-height:100vh;
+    max-width: 100vw;
   }
   
   .menu-icon {
@@ -132,6 +134,7 @@ body {
   .card {
     display: flex;
     flex-direction: column;
+  
     align-items: center;
     width: 100%;
     background-color: #82bef6;
@@ -139,6 +142,7 @@ body {
     -webkit-column-break-inside: avoid;
     padding: 24px;
     box-sizing: border-box;
+    overflow: auto;
   }
   
   /* Force varying heights to simulate dynamic content */
