changed more backend calls to use the datamuse api

--- a/src/components/WordItem/WordItem.css
+++ b/src/components/WordItem/WordItem.css
@@ -1,5 +1,7 @@
 .word-data-box{
-    height:500px;
-    width:500px;
-
+    height:auto;
+    width:100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
